# ZilliaxServer

./: .gitignore  LICENSE  README.md
cache/: CMakeLists.txt  Makefile
cache/src/: CMakelists.txt  cache.cpp  common.h  manager.cpp  manager.h  worker.cpp  worker.h
cpp_test/: CMakeLists.txt  Makefile
cpp_test/src/: C++Test.cpp  CMakelists.txt  infer_type_test.cpp  odbc_test.cpp  tuple_apply_test1.cpp  tuple_apply_test2.cpp  type_and_enum_check.cpp  variant_test.cpp
db/: CMakeLists.txt  Makefile
db/src/: CMakelists.txt  database.cpp  internal_common.h  operation.cpp  parameter.cpp  result_set.cpp  worker.cpp  worker.h
db_test/: CMakeLists.txt  Makefile
db_test/src/: CMakelists.txt  db_test.cpp  main.cpp
log/: readme.txt
log/example/: log.h
mq/: CMakeLists.txt  Makefile
mq/include/mq/: mq.h
mq/src/: CMakelists.txt  common.h  manager.cpp  manager.h  mq.cpp  poller.cpp  poller.h  producer.cpp  producer.h
mq/src/librdkafkacpp/: rdkafkacpp.h  rdkafkacpp_int.h
mq_test_consumer/: build.sh  client_message_consumer.go  client_message_counter.go  go.mod  go.sum  main.go  message_aggregator.go  stream_consumer.go
mq_test_consumer/test_cleaner/: build.sh  main.go
mq_test_consumer/test_verifier/: build.sh  go.mod  go.sum  main.go
mq_test_producer/: CMakeLists.txt  Makefile
mq_test_producer/src/: CMakelists.txt  chat_server.cpp  chat_server.h  main.cpp  mq_producer.cpp  mq_producer.h  msg_counter.cpp  msg_counter.h  msg_manager.cpp  msg_manager.h  msg_worker.cpp  (+1 more)
network/: CMakeLists.txt  Makefile  plan.txt
network_test/: CMakeLists.txt  Makefile
(+77 files in other folders)
